# kg-workflow-testing

./: Makefile  main.py  pyproject.toml  test_main.py
.github/workflows/: main.yaml
src/: main.py
tests/: test_main.py
