[tool.poetry]
name = "kg-workflow-testing"
version = "0.1.0"
description = ""
authors = ["katie-gardner-AND <katharine.gardner@and.digital>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
flake8 = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
